vzr documentation
